--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "app.js",
+	"type": "module",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "node -r dotenv/config app.js",
+		"dev": "nodemon -r dotenv/config app.js"
 	},
 	"repository": {
 		"type": "git",
