--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "app.js",
+	"type": "module",
 	"scripts": {
 		"start": "node -r dotenv/config app.js",
-		"dev": "nodemon -r dotenv/config app.js"
+		"dev": "nodemon -r dotenv/config app.js",
+		"test": "node  -r dotenv/config --experimental-vm-modules node_modules/jest/bin/jest.js"
 	},
 	"repository": {
 		"type": "git",
@@ -19,10 +21,13 @@
 	"homepage": "https://github.com/SchoolOfCode/bc13_w9_project-backend-skam#readme",
 	"dependencies": {
 		"express": "^4.18.2",
+		"jest-supertest-matchers": "^0.0.2",
 		"pg": "^8.8.0"
 	},
 	"devDependencies": {
 		"dotenv": "^16.0.3",
-		"nodemon": "^2.0.20"
+		"jest": "^29.3.1",
+		"nodemon": "^2.0.20",
+		"supertest": "^6.3.1"
 	}
 }
