--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"homepage": "https://github.com/SchoolOfCode/bc13_w9_project-backend-skam#readme",
 	"dependencies": {
+		"cors": "^2.8.5",
 		"express": "^4.18.2",
 		"jest-supertest-matchers": "^0.0.2",
 		"pg": "^8.8.0"
